# supertonic-android

./: .gitignore  CONTEXT.md  GEMINI.md  README.md  build.gradle  gradle.properties  settings.gradle
.github/: FUNDING.yml
.github/workflows/: release.yml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/aidl/com/brahmadeo/supertonic/tts/service/: IPlaybackListener.aidl  IPlaybackService.aidl
app/src/main/java/com/brahmadeo/supertonic/tts/: CheckDataActivity.kt  EbookLibraryActivity.kt  EbookOutlineActivity.kt  HistoryActivity.kt  LexiconActivity.kt  MainActivity.kt  PlaybackActivity.kt  QueueActivity.kt  SavedAudioActivity.kt  SupertonicTTS.kt
app/src/main/java/com/brahmadeo/supertonic/tts/service/: PlaybackService.kt  SupertonicTextToSpeechService.kt
app/src/main/java/com/brahmadeo/supertonic/tts/ui/: DownloadScreen.kt  HistoryScreen.kt  LexiconScreen.kt  MainScreen.kt  PlaybackScreen.kt  QueueScreen.kt  SavedAudioScreen.kt
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-es/: strings.xml
app/src/main/res/values-fr/: strings.xml
app/src/main/res/values-ko/: strings.xml
app/src/main/res/values-night/: colors.xml  themes.xml
app/src/main/res/values-pt/: strings.xml
app/src/main/res/xml/: file_paths.xml
fastlane/metadata/android/en-US/: short_description.txt
metadata/: com.brahmadeo.supertonic.tts.yml
rust/: Cargo.toml  inspect_epub_structure.py
rust/.cargo/: config.toml
rust/src/: filter.rs  helper.rs  lib.rs  thermal.rs
(+17 files in other folders)
